Issue #12336 - Tests and code refactoring.

--- a/config/sync/field.field.block_content.list_of_posts.field_publication_types.yml
+++ b/config/sync/field.field.block_content.list_of_posts.field_publication_types.yml
@@ -15,85 +15,7 @@ label: 'Publication Types'
 description: ''
 required: false
 translatable: false
-default_value:
-  -
-    value: all
-  -
-    value: artwork
-  -
-    value: audiovisual
-  -
-    value: bill
-  -
-    value: book
-  -
-    value: book_chapter
-  -
-    value: broadcast
-  -
-    value: case
-  -
-    value: chart
-  -
-    value: classical
-  -
-    value: conference_paper
-  -
-    value: conference_proceedings
-  -
-    value: data
-  -
-    value: database
-  -
-    value: film
-  -
-    value: government_report
-  -
-    value: hearing
-  -
-    value: journal
-  -
-    value: journal_article
-  -
-    value: legal_ruling
-  -
-    value: magazine_article
-  -
-    value: manuscript
-  -
-    value: map
-  -
-    value: miscellaneous
-  -
-    value: miscellaneous_section
-  -
-    value: newspaper_article
-  -
-    value: patent
-  -
-    value: personal
-  -
-    value: presentation
-  -
-    value: report
-  -
-    value: software
-  -
-    value: statute
-  -
-    value: thesis
-  -
-    value: unpublished
-  -
-    value: website
-  -
-    value: web_article
-  -
-    value: web_project_page
-  -
-    value: web_service
-  -
-    value: working_paper
-default_value_callback: ''
+default_value: {  }
+default_value_callback: os_widgets_default_value_function
 settings: {  }
 field_type: list_string
