--- a/config/sync/field.storage.block_content.field_publication_types.yml
+++ b/config/sync/field.storage.block_content.field_publication_types.yml
@@ -10,125 +10,8 @@ field_name: field_publication_types
 entity_type: block_content
 type: list_string
 settings:
-  allowed_values:
-    -
-      value: all
-      label: 'Select All'
-    -
-      value: artwork
-      label: Artwork
-    -
-      value: audiovisual
-      label: Audiovisual
-    -
-      value: bill
-      label: Bill
-    -
-      value: book
-      label: Book
-    -
-      value: book_chapter
-      label: 'Book Chapter'
-    -
-      value: broadcast
-      label: Broadcast
-    -
-      value: case
-      label: Case
-    -
-      value: chart
-      label: Chart
-    -
-      value: classical
-      label: Classical
-    -
-      value: conference_paper
-      label: 'Conference Paper'
-    -
-      value: conference_proceedings
-      label: 'Conference Proceedings'
-    -
-      value: data
-      label: Data
-    -
-      value: database
-      label: Database
-    -
-      value: film
-      label: Film
-    -
-      value: government_report
-      label: 'Government Report'
-    -
-      value: hearing
-      label: Hearing
-    -
-      value: journal
-      label: Journal
-    -
-      value: journal_article
-      label: 'Journal Article'
-    -
-      value: legal_ruling
-      label: 'Legal Ruling'
-    -
-      value: magazine_article
-      label: 'Magazine Article'
-    -
-      value: manuscript
-      label: Manuscript
-    -
-      value: map
-      label: Map
-    -
-      value: miscellaneous
-      label: Miscellaneous
-    -
-      value: miscellaneous_section
-      label: 'Miscellaneous Section'
-    -
-      value: newspaper_article
-      label: 'Newspaper Article'
-    -
-      value: patent
-      label: Patent
-    -
-      value: personal
-      label: Personal
-    -
-      value: presentation
-      label: Presentation
-    -
-      value: report
-      label: Report
-    -
-      value: software
-      label: Software
-    -
-      value: statute
-      label: Statute
-    -
-      value: thesis
-      label: Thesis
-    -
-      value: unpublished
-      label: Unpublished
-    -
-      value: website
-      label: Website
-    -
-      value: web_article
-      label: 'Web Article'
-    -
-      value: web_project_page
-      label: 'Web Project Page'
-    -
-      value: web_service
-      label: 'Web Service'
-    -
-      value: working_paper
-      label: 'Working Paper'
-  allowed_values_function: ''
+  allowed_values: {  }
+  allowed_values_function: os_widgets_allowed_values_function
 module: options
 locked: false
 cardinality: -1
