Issue #11846 - Code refactoring
Move makeCustomThemeInstallable inside separate service.

--- a/profile/modules/cp/modules/cp_appearance/cp_appearance.services.yml
+++ b/profile/modules/cp/modules/cp_appearance/cp_appearance.services.yml
@@ -5,3 +5,5 @@ services:
   cp_appearance.theme_selector_builder:
     class: \Drupal\cp_appearance\ThemeSelectorBuilder
     arguments: ['@theme_handler']
+  cp_appearance.custom_theme_installer:
+    class: \Drupal\cp_appearance\CustomThemeInstaller
