Issue #11846 - Fix publications kernel test timeout

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,8 @@ env:
     - JOB="job:run-kernel-tests widgets-1"
     - JOB="job:run-kernel-tests widgets-2"
     - JOB="job:run-kernel-tests os-theme-preview,cp-appearance,profiles"
-    - JOB="job:run-kernel-tests publications"
+    - JOB="job:run-kernel-tests publications-1"
+    - JOB="job:run-kernel-tests publications-2"
     - JOB="job:run-kernel-tests redirect,vsite"
     - JOB="job:run-kernel-tests os"
     - JOB="job:run-kernel-tests cp"
