--- a/config/sync/core.entity_view_display.block_content.list_of_posts.default.yml
+++ b/config/sync/core.entity_view_display.block_content.list_of_posts.default.yml
@@ -16,25 +16,11 @@ dependencies:
     - field.field.block_content.list_of_posts.field_sorted_by
     - field.field.block_content.list_of_posts.field_url_for_the_more_link
     - field.field.block_content.list_of_posts.field_widget_title
-  module:
-    - link
 id: block_content.list_of_posts.default
 targetEntityType: block_content
 bundle: list_of_posts
 mode: default
 content:
-  field_url_for_the_more_link:
-    weight: 1
-    label: above
-    settings:
-      trim_length: 80
-      url_only: false
-      url_plain: false
-      rel: ''
-      target: ''
-    third_party_settings: {  }
-    type: link
-    region: content
   field_widget_title:
     weight: 0
     label: above
@@ -54,4 +40,5 @@ hidden:
   field_show_more_link: true
   field_show_pager: true
   field_sorted_by: true
+  field_url_for_the_more_link: true
   langcode: true
