--- a/.travis.yml
+++ b/.travis.yml
@@ -25,21 +25,22 @@ env:
     - PATH="$PATH:$HOME/.composer/vendor/bin"
     - TRAVIS_NODE_VERSION="4"
   matrix:
-    - JOB=job:check-coding-standards
-    - JOB=job:run-unit-tests
-    - JOB="job:run-kernel-tests widgets-1"
-    - JOB="job:run-kernel-tests widgets-2"
-    - JOB="job:run-kernel-tests os-theme-preview,cp-appearance,profiles"
-    - JOB="job:run-kernel-tests publications-1"
-    - JOB="job:run-kernel-tests publications-2"
-    - JOB="job:run-kernel-tests redirect,vsite"
-    - JOB="job:run-kernel-tests os"
-    - JOB="job:run-kernel-tests cp"
-    - JOB="job:run-kernel-tests other,cp-menu,wysiwyg"
-    - JOB="job:run-functional-tests classes,events,pages,cp,media-browser,os-theme-preview,breadcrumbs,analytics,cp-menu,publications,cp-appearance,redirect,twitter,vsite_favicon"
-    - JOB="job:run-functional-tests os,vsite"
-    - JOB="job:run-functional-javascript-tests classes,pages,publications,widgets,cp-appearance,cp-menu,profiles,cp,mailchimp,metatag,redirect"
-    - JOB="job:run-functional-javascript-tests events,os,vsite,os-theme-preview"
+#    - JOB=job:check-coding-standards
+#    - JOB=job:run-unit-tests
+#    - JOB="job:run-kernel-tests widgets-1"
+#    - JOB="job:run-kernel-tests widgets-2"
+#    - JOB="job:run-kernel-tests os-theme-preview,cp-appearance,profiles"
+#    - JOB="job:run-kernel-tests publications-1"
+#    - JOB="job:run-kernel-tests publications-2"
+    - JOB="job:run-kernel-tests unique"
+#    - JOB="job:run-kernel-tests redirect,vsite"
+#    - JOB="job:run-kernel-tests os"
+#    - JOB="job:run-kernel-tests cp"
+#    - JOB="job:run-kernel-tests other,cp-menu,wysiwyg"
+#    - JOB="job:run-functional-tests classes,events,pages,cp,media-browser,os-theme-preview,breadcrumbs,analytics,cp-menu,publications,cp-appearance,redirect,twitter,vsite_favicon"
+#    - JOB="job:run-functional-tests os,vsite"
+#    - JOB="job:run-functional-javascript-tests classes,pages,publications,widgets,cp-appearance,cp-menu,profiles,cp,mailchimp,metatag,redirect"
+#    - JOB="job:run-functional-javascript-tests events,os,vsite,os-theme-preview"
 #    - JOB=job:run-behat-tests
 
 before_install:
