--- a/profile/modules/apps/os_widgets/os_widgets.routing.yml
+++ b/profile/modules/apps/os_widgets/os_widgets.routing.yml
@@ -46,3 +46,9 @@ os_widgets.add_slideshow:
         type: entity:block_content
   requirements:
     _add_slideshow_access_check: 'TRUE'
+os_widgets.widgets_pagination_ajax:
+  path: '/refresh-widget-content/{id}'
+  defaults:
+    _controller: '\Drupal\os_widgets\Controller\WidgetsPaginationController::changePage'
+  requirements:
+    _permission: 'access content'
