--- a/composer.json
+++ b/composer.json
@@ -252,6 +252,7 @@
         "drupal/devel": "^1.2",
         "drupal/features": "^3.7",
         "drupal/restui": "^1.17",
+        "sweetchuck/robo-cdd": "^0.0.1",
         "weitzman/drupal-test-traits": "^1.3"
     },
     "conflict": {
