--- a/profile/modules/apps/os_app_access/os_app_access.services.yml
+++ b/profile/modules/apps/os_app_access/os_app_access.services.yml
@@ -2,6 +2,6 @@ services:
   os_app_access.app_access:
     class: \Drupal\os_app_access\Access\AppAccess
     arguments: ['@config.factory', '@vsite.context_manager', '@vsite.app.manager']
-  os_app_access.user_app_loader:
+  os_app_access.app_loader:
     class: \Drupal\os_app_access\AppLoader
     arguments: ['@vsite.app.manager', '@os_app_access.app_access']
