--- a/config/sync/field.field.node.events.body.yml
+++ b/config/sync/field.field.node.events.body.yml
@@ -13,7 +13,7 @@ entity_type: node
 bundle: events
 label: Body
 description: ''
-required: true
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
