--- a/profile/modules/cp/modules/cp_menu/cp_menu.links.menu.yml
+++ b/profile/modules/cp/modules/cp_menu/cp_menu.links.menu.yml
@@ -3,3 +3,8 @@ cp_menu.home:
   route_name: <front>
   menu_name: main
   weight: -50
+cp_menu.calendar:
+  title: 'Calendar'
+  route_name: view.calendar.page_1
+  menu_name: main
+  weight: 0
