Issue #12570 - Today tab added in calendar.

--- a/config/sync/views.view.calendar.yml
+++ b/config/sync/views.view.calendar.yml
@@ -74,7 +74,7 @@ display:
           times:
             default_date: false
             date: ''
-          left: 'month listWeek listDay'
+          left: 'today month listWeek listDay'
           center: 'prev title next'
           right: ''
           timeformat: 'h:mm A'
