--- a/.travis.yml
+++ b/.travis.yml
@@ -31,11 +31,11 @@ env:
     - JOB="job:run-kernel-tests widgets-2"
     - JOB="job:run-kernel-tests os-theme-preview,cp-appearance,profiles"
     - JOB="job:run-kernel-tests publications-1,redirect"
-    - JOB="job:run-kernel-tests publications-2"
+    - JOB="job:run-kernel-tests publications-2,wysiwyg"
     - JOB="job:run-kernel-tests vsite,widgets-3"
     - JOB="job:run-kernel-tests os"
     - JOB="job:run-kernel-tests cp"
-    - JOB="job:run-kernel-tests other,cp-menu,wysiwyg"
+    - JOB="job:run-kernel-tests other,cp-menu"
     - JOB="job:run-functional-tests classes,events,pages,cp,media-browser,os-theme-preview,breadcrumbs,analytics,cp-menu,publications,cp-appearance,redirect,twitter,vsite_favicon"
     - JOB="job:run-functional-tests os,vsite"
     - JOB="job:run-functional-javascript-tests classes,pages,publications,cp-appearance,cp-menu,profiles,cp,mailchimp,metatag,redirect"
