Issue #12456 - Fix - Contextual links not appearing for tabs widgets (#12601)
* Issue #12456 - Fix - Contextual links not appearing for tabs widgets

* Issue #12456 - Show contextual link within tabs

* Issue #12456 - Fix testNodeDeleteCancelButtonList failure

* Issue #12456 - tabs ui code added as per d7

* Issue #12456 - Using paragraphs for field_widget_collection.

* Issue #12456 - Paragraph field settings.

* Issue #12456 - Custom entity_reference_with_value fieldType added.

* Issue #12456 - Modified field_widget_collection.

* Issue #12456 - Updated tabs title with section_title.

* Issue #12456 - fixed contexual link overlap issue in tabs

* Issue #12456 - Modified tests for Tabs widget and addressed PR comments.

* Issue #12456 - Created category for custom field type.

* Issue #12456 - Added description for field_widget_colelction.

--- a/config/sync/field.storage.block_content.field_widget_collection.yml
+++ b/config/sync/field.storage.block_content.field_widget_collection.yml
@@ -1,16 +1,17 @@
-uuid: 51b72101-15c6-4fa1-8850-83ba9ac374b9
+uuid: ca0ce353-bd2b-45ad-a3f2-173f0209e5f3
 langcode: en
 status: true
 dependencies:
   module:
     - block_content
+    - os_widgets
 id: block_content.field_widget_collection
 field_name: field_widget_collection
 entity_type: block_content
-type: entity_reference
+type: entity_reference_with_value
 settings:
   target_type: block_content
-module: core
+module: os_widgets
 locked: false
 cardinality: -1
 translatable: true
