--- a/config/sync/core.entity_form_display.block_content.tabs.default.yml
+++ b/config/sync/core.entity_form_display.block_content.tabs.default.yml
@@ -7,10 +7,9 @@ dependencies:
     - field.field.block_content.tabs.field_widget_collection
     - field.field.block_content.tabs.field_widget_title
   module:
-    - content_moderation
     - field_layout
     - layout_discovery
-    - os_media
+    - os_widgets
 third_party_settings:
   field_layout:
     id: layout_onecol
@@ -21,13 +20,13 @@ bundle: tabs
 mode: default
 content:
   field_widget_collection:
-    weight: 103
+    weight: 101
     settings: {  }
     third_party_settings: {  }
     type: list_collection_widget
     region: content
   field_widget_title:
-    weight: 101
+    weight: 2
     settings:
       size: 60
       placeholder: ''
@@ -36,7 +35,7 @@ content:
     region: content
   info:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -44,7 +43,7 @@ content:
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 2
+    weight: 1
     region: content
     settings:
       include_locked: true
