--- a/config/sync/field.field.block_content.tabs.field_widget_collection.yml
+++ b/config/sync/field.field.block_content.tabs.field_widget_collection.yml
@@ -1,4 +1,4 @@
-uuid: c95204dd-52d1-4693-a8d2-74081552b3c1
+uuid: e40c9d5e-be7c-40b7-8aa8-569d71f425ea
 langcode: en
 status: true
 dependencies:
@@ -8,16 +8,21 @@ dependencies:
     - block_content.type.custom_text_html
     - block_content.type.embed_media
     - block_content.type.featured_posts
+    - block_content.type.follow_me
+    - block_content.type.list_of_posts
     - block_content.type.mailchimp_subscription
     - block_content.type.media_gallery
     - block_content.type.publication_authors
     - block_content.type.publication_types
     - block_content.type.publication_years
     - block_content.type.rss_feed
+    - block_content.type.slideshow
     - block_content.type.tabs
     - block_content.type.taxonomy
     - block_content.type.twitter_feed
     - field.storage.block_content.field_widget_collection
+  module:
+    - os_widgets
 id: block_content.tabs.field_widget_collection
 field_name: field_widget_collection
 entity_type: block_content
@@ -37,17 +42,21 @@ settings:
       custom_text_html: custom_text_html
       embed_media: embed_media
       featured_posts: featured_posts
+      follow_me: follow_me
+      list_of_posts: list_of_posts
       mailchimp_subscription: mailchimp_subscription
       media_gallery: media_gallery
       publication_authors: publication_authors
       publication_types: publication_types
       publication_years: publication_years
       rss_feed: rss_feed
+      slideshow: slideshow
+      tabs: tabs
       taxonomy: taxonomy
       twitter_feed: twitter_feed
     sort:
       field: id
       direction: ASC
-    auto_create: false
+    auto_create: 0
     auto_create_bundle: addthis
-field_type: entity_reference
+field_type: entity_reference_with_value
